// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loose coordinate schema error 1`] = `
{
  "0": "yup:number.longitude",
  "1": "yup:number.latitude",
}
`;

exports[`loose coordinate schema error when some are string 1`] = `
{
  "1": "yup:number.latitude",
}
`;

exports[`loose coordinate schema error when undefined 1`] = `
{
  "0": "yup:number.longitude",
  "1": "yup:number.latitude",
  "2": "yup:number.altitude",
}
`;

exports[`loose coordinate schema error when wrong array length 1`] = `
{
  "": {
    "key": "yup:array.max",
    "options": {
      "max": 3,
      "path": "this",
    },
  },
}
`;

exports[`point input schema should be invalid for all 1`] = `
{
  "coordinates": [
    "yup:number.longitude",
    "yup:number.latitude",
  ],
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
  "kind": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "put-in, put-in-alt, put-in-road, take-out, take-out-alt, take-out-road, waterfall, rapid, portage, playspot, hazard, river-campsite, wild-camping, paid-camping, gauge, hike-waypoint, bridge, dam, power-plant, kayak-shop, other",
    },
  },
}
`;

exports[`point input schema should be invalid for extra coordinate array item 1`] = `
{
  "coordinates": {
    "key": "yup:array.max",
    "options": {
      "max": 3,
      "path": "coordinates",
    },
  },
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`point input schema should be invalid for lat only 1`] = `
{
  "coordinates": [
    "yup:number.longitude",
  ],
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`point input schema should be invalid for lng only 1`] = `
{
  "coordinates": [
    ,
    "yup:number.latitude",
  ],
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;
